--- a/public/html-exercises/images-2.html
+++ b/public/html-exercises/images-2.html
@@ -4,10 +4,30 @@
     </head>
     
     <body>
-        <img src="childhood.jpg" alt="Myself as a child"/>
+        <h1>Life as I know it</h1>
+        <img src="images/childhood.jpg" alt="Myself as a child" width="500px" height="300px"/>
         <br>
-        <img src="hs.jpg" alt="My highschool graduation with my then best friend" width="200px" height="150px"/>
+            <p>>Here's my picture when I was a young kid with my sister (since I cannot find a baby picture of myself). I was a happy child, more on the talkative side, actually. I talked like an adult, my mom would say. 
+            I could talk clearly at an early age. I liked puzzles and asked a lot of questions, didn't like math so much. I was goofy and a bit selfish. 
+            </p>
+       <br>
+       <img src="images/hs.jpg" alt="My highschool graduation with my classmate" width="500px" height="300px"/>
+       <br>
+           <p>
+               I spent a lot of time transferring schools during my four years in high school. The up side of this though is that I got to meet a lot of people in the process. I got to experience much more things that other people couldn't. 
+               It was an interesting four years, and I don't really think I truly regret any of it.
+           </p>
         <br>
-        <img src="http://128.199.219.97:8080/images/baby.jpg" alt="This is a cute baby."/>
+        <img src="images/recent.jpg" alt="My recent picture" width="300px" height="300px"/>
+            <p>
+                Nowadays, things are complicated. Surely life isn't as it was just a couple of years ago. I think (or maybe I know) that in more ways, I am a different person. I'd like to believe I'm a better one.
+                Strengthened by experiences, toughened by conquered problems and dilemmas but it's okay, even diamonds have to endure much pressure before they come out as strong and as stunning as we know them to be.
+            </p>
+        <br>
+        <img src="images/future.jpg" alt="This is what I want to be-a fashion/interior designer" width="500px" height="400px"/>
+            <p>
+                What I want to be is fairly different with what I am trying to accomplish for the past three years. I've been studying to be a degree holder of Economics when in fact, I want to be a designer. I am so fascinated by art that I want to make it.
+                Seeing it is not enough for me. I'd like to believe I am passionate about designing, <em>about art</em>. So that's what I want to be in the next couple of years. 
+            </p>
     </body>
 </html>
