--- a/public/history-of-the-internet/the-first-internet.html
+++ b/public/history-of-the-internet/the-first-internet.html
@@ -31,11 +31,11 @@
 				
 				<!--The container of the navigation Tabs-->
 				<div class="nav">
-					<a href="https://simple-node-server-jafjamisola.c9.io/history-of-the-internet/index.html">Home</a>
-					<a href="https://simple-node-server-jafjamisola.c9.io/history-of-the-internet/world-war-2.html">World War 2</a>
-					<a href="http://simple-node-server.jafjamisola.c9.io/history-of-the-internet/early-protocols.html">Early Protocol</a>
-					<a href="http://simple-node-server.jafjamisola.c9.io/history-of-the-internet/the-first-internet.html">First Internet</a>
-					<a href="http://simple-node-server.jafjamisola.c9.io/history-of-the-internet/early-world-wide-web.html">Early WWW</a>
+					<a href="index.html">Home</a>
+					<a href="world-war-2.html">World War 2</a>
+					<a href="early-protocols.html">Early Protocol</a>
+					<a href="the-first-internet.html">First Internet</a>
+					<a href="early-world-wide-web.html">Early WWW</a>
 				</div>
 				
 				<!--The white empty space in the middle-->
